# boundless-foundry-template

./: .env  .env.testnet  .gitignore  .gitmodules  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: main.yml
apps/: Cargo.toml
apps/src/: main.rs
contracts/scripts/: Deploy.s.sol
contracts/src/: EvenNumber.sol  IEvenNumber.sol
contracts/test/: Counter.t.sol  EvenNumber.t.sol
guests/: Cargo.toml  build.rs
guests/echo/: Cargo.toml
guests/is-even/: Cargo.toml
guests/is-even/src/: main.rs
guests/tests/: is-even.rs
