[workspace]
resolver = "2"
members = ["apps", "guests"]
exclude = ["lib"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# Intra-workspace dependencies
guests = { path = "./guests" }

# boundless monorepo dependencies.
# TODO(#4): while the repo is private, using the SSH URL and `net.git-fetch-with-cli = true` is required
aggregation-set = { git = "ssh://git@github.com/boundless-xyz/boundless.git", rev = "6d8ea085cfd81241b5a2643d2cb0845a7284cf7a" }
guest-assessor = { git = "ssh://git@github.com/boundless-xyz/boundless.git", rev = "6d8ea085cfd81241b5a2643d2cb0845a7284cf7a" }
boundless-market = { git = "ssh://git@github.com/boundless-xyz/boundless.git", rev = "6d8ea085cfd81241b5a2643d2cb0845a7284cf7a" }

# risc0 monorepo dependencies.
risc0-build = { version = "1.1.1", features = ["docker"] }
risc0-zkvm = { version = "1.1.1", default-features = false }

# risc0-ethereum dependencies.
risc0-build-ethereum = { version = "1.1" }
risc0-ethereum-contracts = { version = "1.1" }

alloy = { version = "0.2" }
alloy-primitives = { version = "0.7", default-features = false, features = ["rlp", "serde", "std"] }
alloy-sol-types = { version = "0.7" }
anyhow = { version = "1.0" }
bincode = { version = "1.3" }
bytemuck = { version = "1.16" }
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"
futures-util = "0.3"
hex = { version = "0.4" }
log = { version = "0.4" }
erc20-counter-methods = { path = "./methods" }
serde = { version = "1.0", features = ["derive", "std"] }
serde_json = "1.0"
sha2 = { version = "0.10" }
test-log = { version = "0.2", features = ["trace"] }
tokio = { version = "1" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"

[profile.release]
debug = 1
lto = "thin"
